Fix progress bar color not showing up

--- a/src/progress.css
+++ b/src/progress.css
@@ -14,7 +14,7 @@
       #a2e8f3 60%,
       #00a5e6 100%
     )
-    repeat;
+    repeat !important;
 
   animation-duration: 2s;
   background-size: 50% 100%;
